# PROJECT_TEMPLATE

./: .editorconfig  .eslintrc.js  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CI_CD_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  Dockerfile  Enter-Project.ps1  Makefile  PROJECT_TEMPLATE.code-workspace  README.MD  README.md  SECURITY.md  docker-compose.yml  enter-project.bat  eslint.config.mjs  flake.nix  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  secrets.enc.yaml  shell.nix  test-serverless.js  test_display.sh  trivy.yaml  tsconfig.json  vercel.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg  post-commit  pre-commit
00_DOCS/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  api.md  deployment.md  environment-setup.md  sample.md
01_SRC/: __init__.py  index.js  index.test.js  index.test.ts  index.ts  main.py
02_TEST/: test_main.py  test_template.py
03_BUILD/: .gitkeep
05_ASSETS/: README.md
06_CONFIG/: .env.example  .eslintrc.js  .prettierignore  .prettierrc  alerting_rules.yml  cache.js  config.js  config.json  i18n.js  init.sql  loki-config.yaml  prometheus.yml  promtail-config.yaml  security.json
07_SCRIPT/: Setup-Ultimate-Windows.ps1  build.sh  deploy.sh  gitops-deploy.sh  load-test.js  performance-test.sh  setup-dev-workspace.sh  setup-dev.sh  setup-ultimate.sh  setup-windows-wsl.ps1  setup-windows.ps1  test-env.bat  test-env.sh
config/: .env.example  .prettierignore  alerting_rules.yml  cache.js  config.js  init.sql  security.json
docs/: CHANGELOG.md  api.md  deployment.md  sample.md  (+3 more)
(+56 files in other folders)
